<resources>
    <string name="app_name">Quizzy</string>

    <!-- login -->
    <string name="tv_login_username">Nom d\'utilisateur</string>
    <string name="tv_login_password">Mot de passe</string>
    <string name="btn_login">CONNEXION</string>
    <string name="dialog_login">Connexion ...</string>
    <string name="error_user_not_found">Nom d\'utilisateur ou mot de passe incorrect</string>
    <string name="tv_link_inscription">Inscrivez-vous !</string>
    <string name="title_activity_login">Connexion</string>
    <!-- end login -->

    <!-- sign in -->
    <string name="tv_sign_in_nom">Nom</string>
    <string name="tv_sign_in_prenom">Prénom</string>
    <string name="tv_sign_in_username">Nom d\'utilisateur</string>
    <string name="tv_sign_birthday_label">Date de naissance :</string>
    <string name="btn_sign_in_choose_birthday">Choisir une date</string>
    <string name="tv_sign_in_email">Email</string>
    <string name="tv_sign_in_password">Mot de passe</string>
    <string name="btn_choose_img_sign_in">Changer</string>
    <string name="tv_sign_in_confirm_password">Mot de passe(2)</string>
    <string name="btn_sign_in">INSCRIPTION</string>
    <string name="et_error_email">L\'email doit être valide</string>
    <string name="et_error_mdp_diff">Les mots de passe sont different</string>
    <string name="dialog_sign_in_title">Autorisez vous Quizzy à accéder à vos photos ?</string>
    <string name="dialog_sign_in_autorise">Autoriser</string>
    <string name="dialog_sign_in_refuse">Refuser</string>
    <string name="choose_img">Selectionner un image</string>
    <string name="error_username_exist">This username already exists</string>
    <string name="error_email_exist">This email already exists</string>
    <string name="title_activity_sign_in">Inscription</string>
    <!-- end sign in -->

    <!-- navigation drawer -->
    <string name="open_nav_drawer">Ouvrir</string>
    <string name="close_nav_drawer">Fermer</string>
    <string name="nav_drawer_profil">Profil</string>
    <string name="nav_drawer_friend">Mes amis</string>
    <string name="nav_drawer_quiz">Mes quiz</string>
    <string name="nav_demande_amis">Demande d\'amis</string>
    <string name="nav_drawer_a_propos">À propos</string>
    <string name="nav_drawer_logout">Déconnection</string>
    <!-- end navigation drawer -->

    <!-- navigation profil -->
    <string name="title_activity_profil">Profile</string>
    <string name="tv_profil_firstName">First name</string>
    <string name="tv_profil_lastName">Last name</string>
    <string name="tv_profil_username">Username</string>
    <string name="tv_profil_email">Email</string>
    <string name="b_profil_validate">Validate</string>
    <!-- end navigation profil -->

    <!-- dialog a propos -->
    <string name="txt_a_propos_title">À propos ...</string>
    <string name="txt_a_propos_message">Mehdi HAMIDI \nRomain VENEL 2018-2019</string>
    <!-- end dialog a propos -->

    <!-- dashboard -->
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="btn_dashboard_new_quiz">Créer un quiz</string>
    <string name="tv_quiz_not_finished">Vos quiz en cours de création :</string>
    <string name="tv_quiz_shared">Les quiz partagés avec vous :</string>
    <!-- end dashboard -->

    <!-- quiz -->
    <string name="title_activity_new_quiz">Quiz</string>
    <string name="tv_quiz_name">Nom de votre quiz</string>
    <string name="tv_quiz_add_img">Ajouter une image à mon quiz</string>
    <string name="btn_quiz_delete_img">Supprimer l\'image de mon quiz</string>
    <string name="btn_quiz_add_part">Ajouter une partie</string>
    <string name="tv_quiz_list_part">Vos parties :</string>
    <string name="message_dialog_check_quiz_validator">Pour valider votre quiz, vous devez obligatoirement avoir :</string>
    <string name="message_dialog_check_quiz_quiz">Un nom d\'utilisateur et au moins une partie à votre quiz</string>
    <string name="message_dialog_check_quiz_part">Un nom et au moins une question pour chaque partie</string>
    <string name="message_dialog_check_quiz_question">Une nom et au moins une réponse pour chaque questions</string>
    <string name="message_dialog_check_quiz_answer">Une nom et au moins une bonne réponse sur l\'ensemble des réponses</string>
    <string name="tv_debut_quiz">Début du quiz dans</string>

    <string name="message_dialog_delete_part">Êtes-vous sûr de vouloir supprimer cette partie ?</string>
    <string name="btn_quiz_finish">Terminer</string>
    <!-- end quiz -->

    <!-- parts -->
    <string name="title_activity_parts">Partie</string>
    <string name="tv_part_name">Nom de votre partie</string>
    <string name="tv_part_desc">Description de votre partie</string>
    <string name="btn_part_add_img">Ajouter une image à ma partie</string>
    <string name="btn_part_delete_img">Supprimer l\'image de ma partie</string>
    <string name="tv_part_list_question">Vos questions :</string>
    <string name="message_dialog_delete_question">Êtes-vous sûr de vouloir supprimer cette question ?</string>
    <string name="btn_part_add_question">Ajouter une question</string>
    <!-- end parts -->

    <!-- question -->
    <string name="title_activity_question">Question</string>
    <string name="tv_question_type">Type de question</string>
    <string name="tv_question_grade">Note à votre question</string>
    <string name="tv_question_name">Nom de votre question</string>
    <string name="btn_question_add_img">Ajouter une image à ma question</string>
    <string name="btn_question_delete_img">Supprimer l\'image de ma question</string>
    <string name="btn_question_add_answer">Ajouter une réponse</string>
    <string name="btn_question_save_question">Sauvegarder</string>
    <string name="et_question_empty_answer">Il doit y avoir au moins 1 réponse</string>
    <string name="et_question_empty_good_answer">Il doit y avoir au moins 1 bonne réponse</string>
    <string name="et_question_empty_name_answer">Tous les champs des réponses ne sont pas renseignés</string>
    <!-- end question -->

    <!-- mes quiz -->
    <string name="title_activity_mes_quiz">Mes quiz</string>
    <string name="tv_mes_quiz_empty">Vous n\'avez aucun quiz</string>
    <string name="tv_mes_quiz_adapteur_date">Validé le</string>
    <!-- end mes quiz -->

    <!-- mon quiz -->
    <string name="btn_mon_quiz_delete">Supprimer ce quiz</string>
    <string name="btn_mon_quiz_share">Partager ce quiz</string>
    <string name="message_dialog_delete_quiz">Êtes-vous sûr de vouloir supprimer ce quiz ?</string>
    <string name="tv_resum_parts">Parties</string>
    <string name="tv_resum_questions">Questions</string>
    <string name="tv_resum_timer">Temps moyen du Quiz</string>
    <string name="btn_resum_run_quiz">Lancer le quiz</string>
    <!-- end mon quiz -->

    <!-- mes quiz -->
    <string name="title_activity_mes_amis">Mes amis</string>
<<<<<<< HEAD
    <string name="btn_add_friend">Ajouter des amis</string>
    <string name="message_dialog_delete_friend">Êtes-vous sûr de vouloir supprimer cet ami ?</string>
    <!-- end mes quiz -->

    <!-- friends request -->
    <string name="title_activity_friends_request">Mes demandes d\'amis</string>
    <string name="counter_friend_requests">friend requests</string>
    <string name="message_dialog_accept_friend_request">Are you sure you want to accept this friend ?</string>
    <string name="message_dialog_refuse_friend_request">Are you sure you want to refuse this friend ?</string>
    <!-- end friends request -->

    <!-- add friend -->
    <string name="title_activity_add_friends">Ajouter des amis</string>
    <string name="counter_add_friends">friend(s) found</string>
    <string name="message_dialog_accept_add_friend">Are you sure you want to add this friend ?</string>
    <!-- end add friend -->

=======
    <!-- end mes quiz -->

>>>>>>> [friendlist][refactor] debut de liste d'amis
    <string name="et_error_empty">Le champ doit être renseigné</string>
    <string name="error_connexion_http">Erreur connexion HTTP</string>
    <string name="error_vollet">Erreur Volley - Réessayer de vous connecter</string>
    <string name="btn_label_back">Retour</string>
    <string name="dialog_btn_yes">Oui</string>
    <string name="dialog_btn_no">Non</string>
    <string name="tv_search">Rechercher</string>
<<<<<<< HEAD
    <string name="friends_found">Friend(s) found</string>
=======
>>>>>>> [friendlist][refactor] debut de liste d'amis


    <!-- fragment question -->
    <string name="btn_next_part">Partie suivante</string>

</resources>
