<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/saumon"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="15dp"
            android:src="@drawable/ic_cross_border_25dp"
            android:tint="@color/white" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingTop="24dp"
        android:paddingRight="25dp"
        android:paddingBottom="20dp"
        android:text="@string/message_dialog_check_quiz_validator" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="5dp"
        android:text="@string/message_dialog_check_quiz_quiz" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"

        android:paddingRight="25dp"
        android:paddingBottom="5dp"
        android:text="@string/message_dialog_check_quiz_part" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="5dp"
        android:text="@string/message_dialog_check_quiz_question" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/message_dialog_check_quiz_answer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_close_dialog_check_quiz"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="ok" />

    </LinearLayout>

</LinearLayout>