<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_parts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PartsActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/tv_part_name" />

        <EditText
            android:id="@+id/et_part_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLength="255" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/tv_part_desc" />

        <EditText
            android:id="@+id/et_part_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLength="255" />

        <TextView
            android:id="@+id/tv_quiz_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/ic_add_24dp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/darkGray"
            android:text="@string/btn_part_add_img" />

        <com.dmallcott.dismissibleimageview.DismissibleImageView
            android:id="@+id/iv_part_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:drawablePadding="5dp"
            android:text="@string/tv_part_list_question" />

        <ListView
            android:id="@+id/lv_part_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
        </ListView>

        <TextView
            android:id="@+id/tv_part_add_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/ic_add_24dp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/btn_part_add_question" />

    </LinearLayout>

</LinearLayout>
