<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_question"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".QuestionActivity">

        <EditText
            android:id="@+id/et_question_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/custome_edit_text_dark"
            android:drawableLeft="@drawable/ic_et_name"
            android:drawablePadding="10dp"
            android:hint="@string/tv_question_name"
            android:maxLength="255"
            android:textColor="@color/graywhite"
            android:textColorHint="@color/graywhite" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/graywhite"
            android:text="@string/tv_question_type" />

        <Spinner
            android:id="@+id/sp_question_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/graywhite"
            android:text="@string/tv_question_grade" />

        <Spinner
            android:id="@+id/sp_question_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_question_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:drawableLeft="@drawable/ic_add_24dp"
                android:drawablePadding="5dp"
                android:drawableTint="@color/graywhite"
                android:text="@string/add_img"
                android:textColor="@color/graywhite" />

            <com.dmallcott.dismissibleimageview.DismissibleImageView
                android:id="@+id/iv_question_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/all_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/tv_question_add_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/ic_add_24dp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/graywhite"
            android:text="@string/btn_question_add_answer"
            android:textColor="@color/graywhite" />

        <TextView
            android:id="@+id/tv_question_error_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/red"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_question_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/yellowBtn"
            android:text="@string/btn_question_save_question"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>
