<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.dmallcott.dismissibleimageview.DismissibleImageView
            android:id="@+id/profil_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_profil_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/tv_profil_firstName"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/et_profil_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLength="255" />

        <TextView
            android:id="@+id/tv_profil_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/tv_profil_lastName"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/et_profil_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLength="255" />

        <TextView
            android:id="@+id/tv_profil_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/tv_profil_email"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/et_profil_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLength="255" />

        <Button
            android:id="@+id/buttonAwesome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_profil_return"
            android:layout_gravity="center"
            android:backgroundTint="@color/buttonReturn"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>